--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,16 @@
     <string name="sign_up">sign_up</string>
     <string name="confirm_password">confirm_password</string>
     <string name="enter_your_name">enter_your_name</string>
+    <string name="fair">Fair</string>
+    <string name="about">About</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="track">Track</string>
+    <string name="history">History</string>
+    <string name="aboutb">About</string>
+    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
+    <string name="default_web_client_id">YOUR_GOOGLE_CLIENT_ID</string>
+    <string name="profile">Profile</string>
+
 </resources>
